#8 デフォルトのメタタグを設定してみる

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,18 @@
     <title>Look@Game</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <meta name="title" content="Look@Game | ゲーム情報のまとめサイト.">
+    <meta name="description" content="ゲーム情報のまとめを随時追加していきます！！">
+    <meta property="og:url" content="https://www.latg.site" />   
+    <meta property="og:type" content="website" />   
+    <meta property="og:title" content="Look@Game | ゲーム情報のまとめサイト." />   
+    <meta property="og:description" content="ゲーム情報のまとめを随時追加していきます！！" />   
+    <meta property="og:site_name" content="Look@Game" />   
+    <meta property="og:image" content="https://www.latg.site/main.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@LookGame4">
   </head>
   <body>
-    <noscript>
-      <strong>ゲーム情報のまとめサイト</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
